# ghostlogic-agent-watchdog

./: .gitignore  LICENSE  README.md  pyproject.toml
.codex-plugin/: plugin.json
audits/: AUDIT_2026-05-01.md
docs/: DEMO_TENANT_SERVER_SPEC.md
logicd/: __init__.py  __main__.py  audit.py  batch.py  client.py  config.py  demo.py  enroll.py  installer.py  redact.py  state.py  tick.py  watcher.py
logicd/adapters/: __init__.py  base.py  claude_code.py  codex.py
tests/: smoke_e2e.py  test_audit.py  test_auth_fatal.py  test_batch.py  test_client.py  test_demo_dog.py  test_durability.py  test_enroll.py  test_installer_platforms.py  test_privacy.py  test_tick.py
